--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
     <nav>
       <h1>GRACIAN GAMES</h1>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Home Section -->
   <main>
-    <section class="home">
-      <img src="logo.png" alt="Gracian Games Logo" />
+    <section>
       <h2>Welcome to Gracian Games</h2>
+      <img src="logo.png" alt="Gracian Games Logo" />
+      <p>This is where your victory begins</p>
       <p>Your ultimate destination for gaming experiences.</p>
+      <p>Gaming is not a hobby, its a lifestyle.</p>
     </section>
-
-    <section id="about" class="about">
-      <h2>About Us</h2>
-      <p>Gracian Games specializes in providing cutting-edge games for enthusiasts. We focus on delivering engaging experiences for all gamers.</p>
-    </section>
-
-    <section id="contact" class="contact">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:info@graciangames.com">info@graciangames.com</a></p>
-      <p>Phone: <a href="phoneto:+255743846765">+255743846765</a></p>
+    <section>
+      <img src="images/night.JPG" alt="About Us Image" width="500">
+      <h2>Level up your play, dominate the game</h2>
+      <p>Your ultimate destination for gaming experiences</p>
+      <p>Come and join with gamers and enjoy the best gaming experiences.</p>
+      <p>Entertainment 100% guaranteed.</p>
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2024 Gracian Games. All rights reserved.</p>
   </footer>
