--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <p>Play like a pro, win like a Legend</p>
         
     
-        <img src="images/gamepad2.JPG" alt="About Us Image" width="500">
+        <img src="gamepad2.JPG" alt="About Us Image" width="500">
         <p>Gracian Games is passionate about delivering top-notch gaming experiences.</p>
         <p>All the beautiful games now in your control</p>
       </section>
