--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <!-- Contact Section -->
   <main>
     <section>
-      <img src="images/ps5.JPG" alt="About Us Image" width="500">
+      <img src="ps5.JPG" alt="About Us Image" width="500">
       <h2>Contact Us</h2>
       <p>Email: <a href="gervasgracian@gmail.com">gervasgracian@gmail.com</a></p>
       <p>Phone: +255 743 846 765</p>
