--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
       <h2>Welcome to Gracian Games</h2>
       <img src="logo.png" alt="Gracian Games Logo" />
       <p>This is where your victory begins</p>
-      <p>Your ultimate destination for gaming experiences.</p>
       <p>Gaming is not a hobby, its a lifestyle.</p>
     </section>
     <section>
-      <img src="images/night.JPG" alt="About Us Image" width="500">
+      <img src="night.JPG" alt="About Us Image" width="500">
       <h2>Level up your play, dominate the game</h2>
       <p>Your ultimate destination for gaming experiences</p>
       <p>Come and join with gamers and enjoy the best gaming experiences.</p>
