--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,14 @@
       <h2>Contact Us</h2>
       <p>Email: <a href="gervasgracian@gmail.com">gervasgracian@gmail.com</a></p>
       <p>Phone: +255 743 846 765</p>
+      <P>Location: Riverside-Ubungo</P>
+      <h4>Working Hours</h4>
+      <p>Mon-Friday: 1000hrs-2200hs</p>
+      <P>Weekends & Holidays: 1000hrs-0000hrs</P>
+
+      <h5>Welcome to the Ultimate Gaming Zone-
+        Where fun never Ends!
+      </h5>
     </section>
   </main>
 
