--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
         <p>We are offering a chance to improve your precision, 
         speed, and performance at your fingertips, nothing stands 
         in your way. 
-        <p>The power to dominate is here are you ready to take it.?</p>
+        The power to dominate is here are you ready to take it.?</p>
 
       <h4>Your ultimate destination for gaming experiences</h4>
-      <p>You come with your skills, We give you our venue and proper</p> 
-      <p>functioning accesories for your to take Total domination on the game</p>
+      <p>You come with your skills, We give you our venue and proper 
+      functioning accesories for your to take Total domination on the game</p>
 
       <h3>Come and join with gamers and enjoy the best gaming experiences.</h3>
-      <p>Step into the ultimate gaming world, where fun meets competition and</p> 
-      <p>excitement knows no bounds.</p> 
+      <p>Step into the ultimate gaming world, where fun meets competition and 
+      excitement knows no bounds.</p> 
       <p>Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
         <h4>Here's what awaits you</h4>
         <p>Immersive Gameplay.</p>
-          <p>Latest consoles for seamless experiences.</p>
-          <p>Join a vibrant community of gamers, make new friends</p>
-          <p>and challenge yourself to be the best.</p>
-          <p>Exclusive events and tournaments to test your skills</p>
-          <p>and win amazing prizes.</p>
+          <p>Latest consoles for seamless experiences.
+          Join a vibrant community of gamers, make new friends
+          and challenge yourself to be the best.
+          Exclusive events and tournaments to test your skills
+          and win amazing prizes.</p>
       <h3>Entertainment 100% guaranteed.</h3>
         <p>Get ready for non stop excitement and unbeatable fun! Whether you're</p>
-        <p>action-packed adventures, intense competition, or just want to unwind</p>
-        <p>with great game, we've got it all.</p>
+        <p>Action-packed adventures, intense competition, or just want to unwind
+        with great game, we've got it all.</p>
         <h4>Here's why we guarantee 100% entertainment</h4>
-        <p>Top tier games i.e FC(FIFA), COD, GTA, Unchartered,</p>
-        <p>Gran Turismo, Forza and much more.</p>
+        <p>Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
+        Gran Turismo, Forza and much more.</p>
         <p>Connect with fellow gamers share tips and create lasting friendships.</p>
         <p>Participate in Exclusive tournaments and win amazing rewards.</p>
           
