--- a/index.html
+++ b/index.html
@@ -24,43 +24,43 @@
     <section>
       <h2>Welcome to Gracian Games</h2>
       <img src="logo.png" alt="Gracian Games Logo" />
-      <p>This is where your victory begins</p>
-      <p>Gaming is not a hobby, its a lifestyle.</p>
+      <p>>>This is where your victory begins.</p>
+      <p>>>Gaming is not a hobby, its a lifestyle.</p>
     </section>
     <section>
       <img src="night.JPG" alt="About Us Image" width="500">
       <h3>Level up your play, dominate the game</h3>
-        <p>Are you ready to elevate your game?</p>
-        <p>We are offering a chance to improve your precision, 
+        <h6>Are you ready to elevate your game?</h6>
+        <p>>>We are offering a chance to improve your precision, 
         speed, and performance at your fingertips, nothing stands 
         in your way. 
         The power to dominate is here are you ready to take it.?</p>
 
-      <h4>Your ultimate destination for gaming experiences</h4>
+      <h5>Your ultimate destination for gaming experiences</h5>
       <p>You come with your skills, We give you our venue and proper 
       functioning accesories for your to take Total domination on the game</p>
 
-      <h3>Come and join with gamers and enjoy the best gaming experiences.</h3>
+      <h6>Come and join with gamers and enjoy the best gaming experiences.</h6>
       <p>Step into the ultimate gaming world, where fun meets competition and 
       excitement knows no bounds.</p> 
       <p>Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
         <h4>Here's what awaits you</h4>
-        <p>Immersive Gameplay.</p>
-          <p>Latest consoles for seamless experiences.
-          Join a vibrant community of gamers, make new friends
-          and challenge yourself to be the best.
-          Exclusive events and tournaments to test your skills
-          and win amazing prizes.</p>
-      <h3>Entertainment 100% guaranteed.</h3>
-        <p>Get ready for non stop excitement and unbeatable fun! Whether you're</p>
-        <p>Action-packed adventures, intense competition, or just want to unwind
-        with great game, we've got it all.</p>
-        <h4>Here's why we guarantee 100% entertainment</h4>
-        <p>Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
-        Gran Turismo, Forza and much more.</p>
-        <p>Connect with fellow gamers share tips and create lasting friendships.</p>
-        <p>Participate in Exclusive tournaments and win amazing rewards.</p>
+  <p>Immersive Gameplay.</p>
+  <p>Latest consoles for seamless experiences.
+      Join a vibrant community of gamers, make new friends
+      and challenge yourself to be the best.
+      Exclusive events and tournaments to test your skills
+      and win amazing prizes.</p>
+      <h5>Entertainment 100% guaranteed.</h5>
+  <p>Get ready for non stop excitement and unbeatable fun! Whether you're</p>
+  <p>Action-packed adventures, intense competition, or just want to unwind
+  with great game, we've got it all.</p>
+  <h4>Here's why we guarantee 100% entertainment</h4>
+    <p>Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
+    Gran Turismo, Forza and much more.</p>
+    <p>Connect with fellow gamers share tips and create lasting friendships.</p>
+    <p>Participate in Exclusive tournaments and win amazing rewards.</p>
           
     </section>
   </main>
