--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <section>
       <h2>Welcome to Gracian Games</h2>
       <img src="logo.png" alt="Gracian Games Logo" />
-      <p>>>This is where your victory begins.</p>
-      <p>>>Gaming is not a hobby, its a lifestyle.</p>
+      <p>This is where all your victories begins.</p>
+      <p>Gaming is not a hobby, its a lifestyle.</p>
     </section>
     <section>
       <img src="night.JPG" alt="About Us Image" width="500">
       <h3>Level up your play, dominate the game</h3>
-        <h6>Are you ready to elevate your game?</h6>
+        <h5>Are you ready to elevate your game?</h5>
         <p>>>We are offering a chance to improve your precision, 
         speed, and performance at your fingertips, nothing stands 
         in your way. 
@@ -40,17 +40,17 @@
       <p>You come with your skills, We give you our venue and proper 
       functioning accesories for your to take Total domination on the game</p>
 
-      <h6>Come and join with gamers and enjoy the best gaming experiences.</h6>
+      <h5>Come and join with gamers and enjoy the best gaming experiences.</h5>
       <p>Step into the ultimate gaming world, where fun meets competition and 
       excitement knows no bounds.</p> 
       <p>Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
         <h4>Here's what awaits you</h4>
-  <p>Immersive Gameplay.</p>
-  <p>Latest consoles for seamless experiences.
+       <p>Immersive Gameplay.</p>
+     <p>Latest consoles for seamless experiences.
       Join a vibrant community of gamers, make new friends
-      and challenge yourself to be the best.
-      Exclusive events and tournaments to test your skills
+      and challenge yourself to be the best.</p>
+      <p>Exclusive events and tournaments to test your skills
       and win amazing prizes.</p>
       <h5>Entertainment 100% guaranteed.</h5>
   <p>Get ready for non stop excitement and unbeatable fun! Whether you're</p>
