--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       excitement knows no bounds.</p> 
       <p>Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
-        <h4>Here's what awaits you</h4>
+        <h5>Here's what awaits you</h5>
        <p>Immersive Gameplay.</p>
-     <p>Latest consoles for seamless experiences.
-      Join a vibrant community of gamers, make new friends
+     <p>Latest consoles for seamless experiences.</p>
+     <p>Join a vibrant community of gamers, make new friends
       and challenge yourself to be the best.</p>
       <p>Exclusive events and tournaments to test your skills
       and win amazing prizes.</p>
@@ -56,7 +56,7 @@
   <p>Get ready for non stop excitement and unbeatable fun! Whether you're</p>
   <p>Action-packed adventures, intense competition, or just want to unwind
   with great game, we've got it all.</p>
-  <h4>Here's why we guarantee 100% entertainment</h4>
+  <h5>Here's why we guarantee 100% entertainment</h5>
     <p>Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
     Gran Turismo, Forza and much more.</p>
     <p>Connect with fellow gamers share tips and create lasting friendships.</p>
