--- a/about.html
+++ b/about.html
@@ -24,22 +24,21 @@
     <section>
         <h2>About Us</h2>
         <p>Play like a pro, win like a Legend</p>
-        <h3>GAMES AVAILABLE</h3>
-        <P>. FC(FIFA)</P>
-        <P>. NBA 2K</P>
-        <P>. COD</P>
-        <P>. Unchartered</P>
-        <P>. Forza</P>
-        <P>. Mortal Combat</P>
-        <P>. GTA</P>
-        <P>. The last of Us</P>
-        <P>. Gran Turismo</P>
-        <P>. Marvel's Spiderman</P>
-        <P>. Black Myth: Wukong</P>
+        <h3 style="text-align: left;">GAMES AVAILABLE</h3>
+        <P style="text-align: left;">. FC(FIFA)</P>
+        <P style="text-align: left;">. NBA 2K</P>
+        <P style="text-align: left;">. COD</P>
+        <P style="text-align: left;">. Unchartered</P>
+        <P style="text-align: left;">. Forza</P>
+        <P style="text-align: left;">. Mortal Combat</P>
+        <P style="text-align: left;">. GTA</P>
+        <P style="text-align: left;">. The last of Us</P>
+        <P style="text-align: left;">. Gran Turismo</P>
+        <P style="text-align: left;">. Marvel's Spiderman</P>
+        <P style="text-align: left;">. Black Myth: Wukong</P>
 
-        <img src="gamepad2.JPG" alt="About Us Image" width="500">
         <p>Gracian Games is passionate about delivering top-notch gaming experiences.</p>
-        <p>All the beautiful games now in your control</p>
+        <h5>All the beautiful games now in your control</h5>
       </section>
   </main>
 
