--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
   <!-- About Section -->
   <main>
     <section>
-        <h2>About Us</h2>
-        <p>Play like a pro, win like a Legend</p>
+        <h2 style="text-align: left;">About Us</h2>
+        <p style="text-align: left;">Play like a pro, win like a Legend</p>
         <h3 style="text-align: left;">GAMES AVAILABLE</h3>
         <P style="text-align: left;">. FC(FIFA)</P>
         <P style="text-align: left;">. NBA 2K</P>
