--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
       <h2>Contact Us</h2>
       <img src="ps5.JPG" alt="About Us Image" width="500">
       <p>Email: <a href="gervasgracian@gmail.com">gervasgracian@gmail.com</a></p>
-      <p>Phone: +255 743 846 765</p>
+      <p>Phone: +255 743 846 765</p> <P style="text-align: center;">mobile: +255 654 872 884 </P>
       <P>Location: Riverside-Ubungo</P>
       <h4>Working Hours</h4>
-      <p>Mon-Friday: 1000hrs-2200hs</p>
+      <p>Mon-Friday: 1000hrs-2200hs</p>   
       <P>Weekends & Holidays: 1000hrs-0000hrs</P>
 
       <h5>Welcome to the Ultimate Gaming Zone-
