--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <section>
         <h2>About Us</h2>
         <p>Play like a pro, win like a Legend</p>
-        <h3 style="text-align: left;">GAMES AVAILABLE</h3> <h3 style="text-align: center;">PS4, PS5 & XBOX </h3>
+        <h3 style="text-align: left;">GAMES AVAILABLE</h3> <h4 style="text-align: left;">PS4, PS5 & XBOX Versions</h>
         <P style="text-align: left;">. FC(FIFA)</P>
         <P style="text-align: left;">. NBA 2K</P>
         <P style="text-align: left;">. COD</P>
