--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <!-- About Section -->
   <main>
     <section>
-        <h2 style="color: aqua;">About Us</h2>
+        <h2 style="color: rgb(255, 0, 234);">About Us</h2>
         <p>Play like a pro, win like a Legend</p>
         <h3 style="text-align: left;">GAMES AVAILABLE</h3> <h4 style="text-align: left;">PS4, PS5 & XBOX Versions</h>
         <P style="text-align: left;">. FC(FIFA)</P>
@@ -38,7 +38,7 @@
         <P style="text-align: left;">. Black Myth: Wukong</P>
 
         <p>Gracian Games is passionate about delivering top-notch gaming experiences.</p>
-        <h5 style="color: aqua;">All the beautiful games now in your control</h5>
+        <h5 style="color: rgb(255, 0, 242);">All the beautiful games now in your control</h5>
       </section>
   </main>
 
