--- a/index.html
+++ b/index.html
@@ -29,34 +29,34 @@
     </section>
     <section>
       <img src="night.JPG" alt="About Us Image" width="700">
-      <h3 style="color: aqua;">Level up your play, dominate the game</h3>
-        <h4 style="color: aqua;"style="text-align: left;">Are you ready to elevate your game?</h4>
+      <h3 >Level up your play, dominate the game</h3>
+        <h4 style="text-align: left;">Are you ready to elevate your game?</h4>
         <p style="text-align: left;">We are offering a chance to improve your precision, 
         speed, and performance at your fingertips, nothing stands 
         in your way. 
         The power to dominate is here are you ready to take it.?</p>
 
-      <h4 style="color: aqua;"style="text-align: left;">Your ultimate destination for gaming experiences</h4>
+      <h4 style="text-align: left;">Your ultimate destination for gaming experiences</h4>
       <p style="text-align: left;">You come with your skills, We give you our venue and proper 
       functioning accesories for your to take Total domination on the game</p>
 
-      <h4 style="color: aqua;"style="text-align: left;">Come and join with gamers and enjoy the best gaming experiences.</h4>
+      <h4 style="text-align: left;">Come and join with gamers and enjoy the best gaming experiences.</h4>
       <p style="text-align: left;">Step into the ultimate gaming world, where fun meets competition and 
       excitement knows no bounds.</p> 
       <p style="text-align: left;">Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
-        <h4 style="color: aqua;"style="text-align: left;">Here's what awaits you</h4>
+        <h4 style="text-align: left;">Here's what awaits you</h4>
        <p style="text-align: left;">Immersive Gameplay.</p>
      <p style="text-align: left;">Latest consoles for seamless experiences.</p>
      <p style="text-align: left;">Join a vibrant community of gamers, make new friends
       and challenge yourself to be the best.</p>
       <p style="text-align: left;">Exclusive events and tournaments to test your skills
       and win amazing prizes.</p>
-      <h4 style="color: aqua;"style="text-align: left;">Entertainment 100% guaranteed.</h4>
+      <h4 style="text-align: left;">Entertainment 100% guaranteed.</h4>
   <p style="text-align: left;">Get ready for non stop excitement and unbeatable fun!</p>
   <p style="text-align: left;">Action-packed adventures, intense competition, or just want to unwind
   with great game, we've got it all.</p>
-  <h4 style="color: aqua;"style="text-align: left;">Here's why we guarantee 100% entertainment</h4>
+  <h4 style="text-align: left;">Here's why we guarantee 100% entertainment</h4>
     <p style="text-align: left;">Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
     Gran Turismo, Forza and much more.</p>
     <p style="text-align: left;">Connect with fellow gamers share tips and create lasting friendships.</p>
