--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
       <h2>Contact Us</h2>
       <img src="ps5.JPG" alt="About Us Image" width="500">
       <p>Email: <a href="gervasgracian@gmail.com">gervasgracian@gmail.com</a></p>
-      <p style="color: rgb(255, 0, 200);">Phone: +255 743 846 765</p> <p style="color: rgb(60, 255, 0);"> mobile: +255 654 872 884 </P>
+      <p style="color: rgb(255, 0, 200);">Phone: +255 743 846 765</p> <p style="color: rgb(255, 0, 255);"> mobile: +255 654 872 884 </P>
       <P>Location: Riverside-Ubungo</P>
       <h4>Working Hours</h4>
       <p>Mon-Friday: 1000hrs-2200hs</p>   
       <P>Weekends & Holidays: 1000hrs-0000hrs</P>
 
-      <h5 style="color: aqua;">Welcome to the Ultimate Gaming Zone-
+      <h5 style="color: rgb(13, 14, 14);">Welcome to the Ultimate Gaming Zone-
         Where fun never Ends!
       </h5>
     </section>
