--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <p>Play like a pro, win like a Legend</p>
         <h3 style="text-align: left;">GAMES AVAILABLE</h3> 
         <h4 style="text-align: left;" style="color: aqua;">PS4, PS5 & XBOX Versions</h4>
-        <h><P style="text-align: left;">. FC(FIFA)</P>
+        <h4><P style="text-align: left;">. FC(FIFA)</P>
         <P style="text-align: left;">. NBA 2K</P>
         <P style="text-align: left;">. COD</P>
         <P style="text-align: left;">. Unchartered</P>
@@ -36,7 +36,7 @@
         <P style="text-align: left;">. The last of Us</P>
         <P style="text-align: left;">. Gran Turismo</P>
         <P style="text-align: left;">. Marvel's Spiderman</P>
-        <P style="text-align: left;">. Black Myth: Wukong</P></h>
+        <P style="text-align: left;">. Black Myth: Wukong</P></h4>
 
         <p>Gracian Games is passionate about delivering top-notch gaming experiences.</p>
         <h5 style="color: rgb(255, 0, 242);">All the beautiful games now in your control</h5>
