--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <h2 style="color: rgb(255, 0, 234);">About Us</h2>
         <p>Play like a pro, win like a Legend</p>
         <h3 style="text-align: left;">GAMES AVAILABLE</h3> 
-        <h4 style="text-align: left;" style="color: aqua;">PS4, PS5 & XBOX Versions</h4>
+        <h4 style="text-align: left;" style="color: rgb(255, 0, 179);">PS4, PS5 & XBOX Versions</h4>
         <h4><P style="text-align: left;">. FC(FIFA)</P>
         <P style="text-align: left;">. NBA 2K</P>
         <P style="text-align: left;">. COD</P>
