--- a/index.html
+++ b/index.html
@@ -31,36 +31,36 @@
       <img src="night.JPG" alt="About Us Image" width="700">
       <h3 >Level up your play, dominate the game</h3>
         <h4 style="text-align: left;">Are you ready to elevate your game?</h4>
-        <p style="text-align: left;">We are offering a chance to improve your precision, 
+        <p style="text-align: justify;">We are offering a chance to improve your precision, 
         speed, and performance at your fingertips, nothing stands 
         in your way. 
         The power to dominate is here are you ready to take it.?</p>
 
       <h4 style="text-align: left;">Your ultimate destination for gaming experiences</h4>
-      <p style="text-align: left;">You come with your skills, We give you our venue and proper 
+      <p style="text-align: justify;">You come with your skills, We give you our venue and proper 
       functioning accesories for your to take Total domination on the game</p>
 
       <h4 style="text-align: left;">Come and join with gamers and enjoy the best gaming experiences.</h4>
-      <p style="text-align: left;">Step into the ultimate gaming world, where fun meets competition and 
+      <p style="text-align: justify;">Step into the ultimate gaming world, where fun meets competition and 
       excitement knows no bounds.</p> 
-      <p style="text-align: left;">Whether you're a seasoned pro or just starting, we have something for 
+      <p style="text-align: justify;">Whether you're a seasoned pro or just starting, we have something for 
         everyone.</p>
         <h4 style="text-align: left;">Here's what awaits you</h4>
-       <p style="text-align: left;">Immersive Gameplay.</p>
-     <p style="text-align: left;">Latest consoles for seamless experiences.</p>
-     <p style="text-align: left;">Join a vibrant community of gamers, make new friends
+       <p style="text-align: justify;">Immersive Gameplay.</p>
+     <p style="text-align: justify;">Latest consoles for seamless experiences.</p>
+     <p style="text-align: justify;">Join a vibrant community of gamers, make new friends
       and challenge yourself to be the best.</p>
-      <p style="text-align: left;">Exclusive events and tournaments to test your skills
+      <p style="text-align: justify;">Exclusive events and tournaments to test your skills
       and win amazing prizes.</p>
       <h4 style="text-align: left;">Entertainment 100% guaranteed.</h4>
-  <p style="text-align: left;">Get ready for non stop excitement and unbeatable fun!</p>
-  <p style="text-align: left;">Action-packed adventures, intense competition, or just want to unwind
+  <p style="text-align: justify;">Get ready for non stop excitement and unbeatable fun!</p>
+  <p style="text-align: justify;">Action-packed adventures, intense competition, or just want to unwind
   with great game, we've got it all.</p>
   <h4 style="text-align: left;">Here's why we guarantee 100% entertainment</h4>
-    <p style="text-align: left;">Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
+    <p style="text-align: justify;">Top tier games i.e FC(FIFA), COD, GTA, Unchartered,
     Gran Turismo, Forza and much more.</p>
-    <p style="text-align: left;">Connect with fellow gamers share tips and create lasting friendships.</p>
-    <p style="text-align: left;">Participate in Exclusive tournaments and win amazing rewards.</p>
+    <p style="text-align: justify;">Connect with fellow gamers share tips and create lasting friendships.</p>
+    <p style="text-align: justify;">Participate in Exclusive tournaments and win amazing rewards.</p>
           
     </section>
   </main>
