--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
   <!-- About Section -->
   <main>
     <section>
-        <h2 style="color: rgb(0, 238, 255);">About Us</h2>
+        <h2 style="color: rgb(129, 10, 40);">About Us</h2>
         <p>Play like a pro, win like a Legend</p>
         <h3 style="text-align: left;">GAMES AVAILABLE</h3> 
-        <h4 style="text-align: left;" style="color: rgb(0, 238, 255);">PS4, PS5 & XBOX Versions</h4>
+        <h4 style="text-align: left;" style="color: rgb(129, 10, 40);">PS4, PS5 & XBOX Versions</h4>
         <h4><P style="text-align: left;">. FC(FIFA)</P>
         <P style="text-align: left;">. NBA 2K</P>
         <P style="text-align: left;">. COD</P>
@@ -37,9 +37,8 @@
         <P style="text-align: left;">. Gran Turismo</P>
         <P style="text-align: left;">. Marvel's Spiderman</P>
         <P style="text-align: left;">. Black Myth: Wukong</P></h4>
-
-        <p style="text-align: justify;">Gracian Games is passionate about delivering top-notch gaming experiences.</p>
-        <h5 style="color: rgb(0, 238, 255);">All the beautiful games now in your control</h5>
+        <p style="text-align: left;">Gracian Games is passionate about delivering top-notch gaming experiences.</p>
+        <h5 style="color: rgb(129, 10, 40);">All the beautiful games now in your control</h5>
       </section>
   </main>
 
