--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Home Section -->
   <main>
     <section>
-      <h2 style="color: aqua;">Welcome to Gracian Games</h2>
+      <h2 style="color: rgb(129, 10, 40);">Welcome to Gracian Games</h2>
       <img src="logo.png" alt="Gracian Games Logo" />
       <p>This is where all your victories begins.</p>
       <p>Gaming is not a hobby, its a lifestyle.</p>
