--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <h2>Contact Us</h2>
       <img src="ps5.JPG" alt="About Us Image" width="700">
       <p>Email: <a href="gervasgracian@gmail.com">gervasgracian@gmail.com</a></p>
-      <p style="color: rgb(129, 10, 40);">Phone: +255 743 846 765</p> <p style="color: rgb(129, 10, 40);"> mobile: +255 654 872 884 </P>
+      <p>Phone: +255 743 846 765</p> <p> mobile: +255 654 872 884 </P>
       <P>Location: Riverside-Ubungo</P>
       <h4>Working Hours</h4>
       <p>Mon-Friday: 1000hrs-2200hs</p>   
